fix works jumping

--- a/css/style.css
+++ b/css/style.css
@@ -350,3 +350,7 @@ a, a:hover {
 .modal-content {
     border: none;
 }
+
+.hidden-work {
+    visibility: hidden;
+}
